Changes for 1.0alpha7:

 - added file frontends/php/graphs.html
 - added file frontends/php/images/sysmaps/host.png
 - added file frontends/php/map.html
 - added file frontends/php/maps.html
 - added file frontends/php/sysmap.html
 - added file frontends/php/sysmaps.html
 - added table sysmap
 - added table sysmaps

Changes for 1.0alpha6:

 - error in PHP frontend in Host definition form 

Changes for 1.0alpha5:

 - changes in manual.txt
 - support for SNMP agents !
 - zabbix_sucker forks N (default=10) copies to run in parallel mode. Monitoring of hundreds of servers is reality ! 
 - "netstat -ln|grep tcp" was replaced by more efficient "netstat -lnt"
 - support for macros in email subject and body
 - fixed zabbix_trapper. Added update_functions (itemid).
 - finally (!) removed include/sysinfo.h
 - source code became more structured
 - call to perror was changed to syslog where necessary 
 - zabbix_sucker will not print "Spent x seconds ..." to syslog
 
Changes for 1.0alpha4:

 - fixed EXECUTE function in sysinfo.c
   It will return FAIL when command not found.
 - added report of Status of Zabbix - report1.html
 - added Availability Report - report2.html
 - added hints on choosing right DB (PostgreSQL vs MySQL) to manual.txt
 - added section on reports in manual.txt
 - fixed "undefined $register" and other warnings in media.html
 - "netstat -an|grep LISTEN" was replaced by more efficient "netstat -ln|grep tcp"
   in zabbix_agent.c
 - critical value for disk space and number of inodes decreased to 100000000 
 - table "platforms" is not used anymore
 - removed platformid and related indexes from table items_template
 - directory upgrades/ created
 - directory create/data/ created
 - Chapter 6 (Upgrading) added to manual.txt
 - added notes for PostgreSQL to manual.txt
 - added key (userid) to table media (MySQL)
 - added key (triggerid) to table actions (MySQL)
 - added key (istrue) to table triggers (MySQL,PostgreSQL)